app/public/styles/Menu.css
*{
    padding: 0;
    margin: 0;
    list-style: none;
    box-sizing: border-box;
}

body{
    font-family: 'Courier New', Courier, monospace;
    display: grid;
    gap: 46px;
    grid-template-rows: 81px 644px 81px;
    background-color: #EDE5BB;
    
}

header{
    grid-row: 1;
}


.bpholder{
    margin-left: 25px;
}


/* Desktop Nav bar */
.navbar {
    height: 81px;
    width: 100%;
    background-color: #00657C;
    display: flex;
    justify-content: space-between;
    gap: 2px;
    /* background-color:#EDE5BB; */
     
}

.Lholder{
    display: flex;
    align-items: center;
    width: auto;
    margin: 0; 
}

.logo{
    width: 142px;
    height: 81px;
}


.nav-desktop{
    display: flex;

    
}

.nav-desktop ul{
    display: flex;
    align-items: center;

}

.nav-desktop li{
    width: 200px;
}

.nav-desktop li a{
    display: block;
    padding:31px;
    color:#EDE5BB;
    text-align: center;
    text-transform: uppercase;
    text-decoration: none;
   
}

.nav-desktop li:hover{
    background-color: #03A1C5;
}

#hamburger-btn{
    display: none;
}


.nav-mobile{
    display: none;
}

.nav-list-mobile{
    display: none;
    
}

.active{
     background-color: #004959;
}

/* Mobile navbar */
@media screen and (max-width: 900px) {
    
.nav-desktop{
    display: none;
}
#hamburger-btn{
    display: block;
    width: 70px;
    height: 40px;
    align-self: center;
    color: #EDE5BB;
    background-color: #00657C;
    border: 0;
    font-size: 35px;
}

.nav-list-mobile{
    display: block;
}

.nav-mobile{
    width: 55% ;
    position: relative;
    height: 0px;
    justify-content: flex-end;
    float: right;
    flex-shrink: 1;
}

.nav-list-mobile li{
    height: 70px;
    line-height: 70px;
    align-items: center;
    text-align: center;
    background-color: #00657C;
    transition: all .5s;
    /* box-shadow: 0 0 100% 100% black; */
    /* color: #EDE5BB; */
}

.nav-list-mobile li a {
    color: #EDE5BB;
    font-size: 31px;
    text-transform: uppercase;
    text-decoration: none;
   
}

.nav-list-mobile li:hover{
    background: #03A1C5;
    transition: 0.5s;
} 

li.active{
    background-color:#004959;
}


}


/* Desktop Body */

.main-bdy{
    grid-row: 2/3;

    display: grid;
    grid-template-columns: repeat(12,1fr);
}

/* Food */
.content:nth-child(1){       
    background-color: red;
    /* grid-column: 1; */
    grid-row: 2;
    grid-column: 2/3;
}

/* Pain/Croiss */
.content:nth-child(2){
    /* grid-area: two; */
     background-color: orange;
     grid-row: 3;
     grid-column: 2/4;
}

/* Sweet */
.content:nth-child(3){
    background-color: yellow;
    grid-row: 3;
    grid-column: 4/6;
}

/* Drinks */
.content:nth-child(4){
   background-color: green;
   grid-row: 2;
   grid-column: 6/7;
 
}

/* Coffee&Tea */
.content:nth-child(5){
     background-color: blue;
     grid-row: 3;
     grid-column: 6/8;
}

/* Cool Drinks */
.content:nth-child(6){
    background-color: indigo;
    grid-row: 3;
    grid-column: 8/10;
}
/* Coffee&Croissant imgs */
.content:nth-child(7){
    background-color: violet;
    grid-row: 4;
    grid-column: 2/4;
}
/* Merengue&Tea imgs */
.content:nth-child(8){
    background-color:gold;
    grid-row: 4;
    grid-column: 8/10;
}

.grid-col-span-2{
    grid-column: span 2;
}

.grid-col-span-2 p{
    font-size: 25px;

    /* align-items: center; */
}

td{
    font-size: 14px;
}

.m-content-grid{
    display: grid;
    grid-column-start: 2;
    grid-column-end: 12;
    gap: 20px;
    /* min-height: 700px; */
    grid-template-rows: 10px 30px 434px 80px 10px;
    grid-template-columns: 10px repeat(8, 1fr) 10px;
    /* color: #95261F; */
    background-color: #BAD3EE;
    /* margin: 0 15px; */

}

.m-list{
    height: 100%;
    width: 100%;
    margin: 0%;
    padding: 0%;
    border-spacing: 0;
    border-collapse: 0;
    /* background-color: green; */
} 

.m-list th{
    text-align: left;
    vertical-align: top;
    height: 40px;
}

.cd-child{
    height: 30px;
}

#s-first{
    height: 124px;
    vertical-align: top;
}


#s-1-space{
    height:4px;
} 

.s-mid{
    vertical-align: top
}
#s-last{
    height: 172.1px;
    vertical-align: top;
}


#d-last{
    /* margin-top: 2px; */
    vertical-align: top;
}

#cd-last{
    vertical-align: top;
    height: 248.85px;
}

.pname{
    /* vertical-align: top; */
}

.pname li{
    margin-left: 11px;
    font-size: 12px;
}

.price{
    text-align: right;
}

/* .li-price{
    vertical-align: top;
} */

/* Image properties */
.grid-col-span-2 img{
    width: 80px;
    height: auto;
}

.bdy-img-grp1{
    /* background-color: green; */
    display: flex;
    gap: 20px;
}

.bdy-img-grp2{
    /* background-color: green; */
    display: flex;
    gap: 20px;
    justify-content: end;
}

#cof-img{

}

#crois-img{
    height: 70px;
    width: 100px;
    transform:rotate(15deg);
}

#mer-img{ 
    width: 100px;
    transform:rotate(165deg);
    /* background-color: black; */
}

#tea-img{

}

/* Mobile body */
@media screen and (max-width: 900px){

    body{
        grid-template-rows: 81px 1620px 81px;
        gap: 46px;
    }

    header{
        grid-row: 1;
    }

    .main-bdy{
        grid-row: 2/3;
        display: grid;
        grid-template-columns: 20px repeat(3,1fr) 20px;
    }

    .m-content-grid{
        display: grid;
        grid-column-start: 2;
        grid-column-end: 5;
        gap: 20px;
        /* min-height: 700px; */
        grid-template-rows: 10px 50px 440px 286px  50px 340px 286px 10px;
        grid-template-columns: 10px 1fr 10px;
        background-color: #00657C;
        /* margin: 0 15px; */
    
    }

    .grid-col-span-2{
        grid-column: 1;
    }
    .grid-col-span-2 p{
        text-align: center;
        /* height: 50px; */
    }

    .cd-child{
        height: 30.8px;
    }
     /* Food */
    .content:nth-child(1){       
        background-color: red;
        grid-row: 2;
        /* grid-column: 1; */
        grid-column: 2;
    }

    /* Pain/Croiss */
    .content:nth-child(2){
        /* grid-area: two; */
         background-color: orange;
         grid-row: 3;
         grid-column:2;
    }

    /* Sweet */

    .content:nth-child(3){
        background-color: yellow;
        grid-row: 4;
        grid-column: 2;
    }
     #s-last{
        height: 30.8px;
     }
    /* Drinks */
    .content:nth-child(4){
       background-color: green;
       grid-row: 5;
       grid-column: 2;
    
    }

    /* Coffee&Tea */
    .content:nth-child(5){
         background-color: blue;
         grid-row: 6;
         grid-column: 2;
    }

    #d-last{
        height: 65px;
    }

    /* Cool Drinks */
    .content:nth-child(6){
        background-color: indigo;
        grid-row: 7;
        grid-column: 2;
    }

    #cd-last{
        height: 30px;
    }

    /* Coffee&Croissant imgs */
    .content:nth-child(7){
        background-color: violet;
        /* grid-row: 8;
        grid-column: 2; */
        display: none;
    }
    /* Merengue&Tea imgs */
    .content:nth-child(8){
        background-color: brown;
        /* grid-row: 8;
        grid-column: 2; */
        display: none;
    }


    .footer{
        grid-row: 3;
    }

    .footer >*{
        display: none;
    }

}




/* footer */
.footer {
    grid-row: 3;
    position: relative;
    display: flex;
    width: 100%;
    bottom: 0px;
    background-color:#00657C;
    height: 81px;
    align-items: center;
    /* margin-top: 52px; */
  }

.f-child{
    height: 54px;
    /* background-color: green; */
}

.location{
    display: flex;
   
    /* flex-shrink: 1; */
}

.location p{
    /* text-align: center; */
    /* height: auto; */
    align-self: center;
    font-size: 20px;
    /* color: #95261F; */
    color: #EDE5BB;
}

.location img{
    width: 40px;
    height: 40px;
}

.footer:nth-child(1){
    justify-self: flex-end;
}
.soc-med{
    gap: 10px;
}

.soc-med img{
    width: 40px;
    height: auto;
}

